# tfm

./: .gitignore  dashboard.py  hellogit.py
analisis_consumos/: README.md  analisis_vivendas.py  caracteristicas_consumo.py  clustering_solo_consumos.py  dashboard.py  juntar_consumos_encuesta.py  llamada_consumos.py  pyproject.toml  requirements-dev.txt  requirements.txt
analisis_consumos/data/: Consumption_ES0031300519741004AP0F_2022-11_2024-10.csv  consumos_viviendas.pbix  datos_combinados.csv  datos_combinados_donde caen.xlsx  dummy_data.csv  encuesta_consumos_oliver.csv  encuesta_consumos_oliver_excel.xlsx  festivos_zgz.csv  power_query.xlsx  viviendas_por_cluster_por_mes_sin2.csv  viviendas_por_cluster_por_mes_todos.csv
analisis_consumos/logs/: 2023-03-01_a_2024-12-01_Agglomerative_k4_c15.txt  2023-03-01_a_2024-12-01_k3_c15.txt  2023-03-01_a_2024-12-01_k4_c15.txt  2023-03-18_a_2024-03-24_k4_c17.txt  estacion_invierno_k3_c17.txt  estacion_verano_k3_c17.txt  estacion_verano_k6_c17.txt  mes_12_k2_c18.txt  mes_12_k6_c18.txt  todo_k3_c14.txt  todo_k3_c16.txt  todo_k4_c14.txt  todo_k6_c17.txt
analisis_consumos/resultados/: .~lock.cluster_metrics.csv#  Resumen_de_Clusters_por_Algoritmo.csv  Resumen_de_Clusters_por_Algoritmo.xlsx  all_labels_unified.csv  all_labels_unified_resumen.csv  cluster_metrics - sin roll.xlsx  cluster_metrics.csv  cluster_metrics_k3.csv  cluster_metrics_resumen.csv  feature_importances.csv  feature_importances_k3.csv  feature_importances_resumen.csv  labels_wide.csv  (+12 more)
forecasting/: pyproject.toml  requirements.lock.txt  requirements.txt
(+5121 files in other folders)
