[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tfm*"]
namespaces = false

[project]
name = "tfm"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1"
]
