[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project]
name = "tfm-forecasting"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = [
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0"
]
